--- a/css/style2.css
+++ b/css/style2.css
@@ -106,8 +106,8 @@ header {
   width: 100%;
   height: 90vh;
   min-height: 600px;
- background-color: white;
- border: 1px solid var(--color-dark);
+  background-color: white;
+  border: 1px solid var(--color-dark);
   
   
   .c-card__description {
@@ -176,6 +176,7 @@ header {
     overflow: hidden;
 
     img {
+      position: absolute;
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -224,52 +225,5 @@ max-width: 100px;
 
 .site-footer a:hover, .site-footer a:focus {
   color: var(--secondary-color);
-}
-
-@media (max-width: 400px) {
-
-  .c-card {
- display: flex;
- flex-direction: column;
-  }
-
- .c-card__figure {
-    width: 100%;
-    position: relative;
-  }
-
-  .c-card__figure {
-    z-index: 1;
-  }
- .c-card__description {
-    z-index: 0;
-  }
-
- .c-card__figure img {
-    position: static; /* Remove absolute positioning */
- height: 200px; /* Set fixed height for mobile */
-  }
-}
-@media (max-width: 1024px) {
-
- .c-card {
- display: flex;
- flex-direction: column;
-  }
-
- .c-card__figure {
-    width: 100%;
-    position: relative;
-  }
-
- .c-card__figure {
-    z-index: 1;
-  }
- .c-card__description {
-    z-index: 0;
-  }
- .c-card__figure img {
- height: 300px; /* Set fixed height for mobile */
-  }
 }
 
